# KAI

./: .sessions.json  CLAUDE.md  CLI_PROMPTER.md  Cargo.toml  README.md  REFACTORING_SUMMARY.md  USAGE.md  server.py
.configurator/iterations/: 2025-08-30T18-56-27-375Z.json
.context/: _SUMMARY.md  file_Cargo.toml.md  file_examples_context_test.rs.md  file_examples_file_system_tools_demo.rs.md  file_examples_harvester_demo.rs.md  file_examples_session_manager_demo.rs.md  file_src_commands_command_registry.rs.md  file_src_context_context_data_store.rs.md  file_src_context_context_manager.rs.md  file_src_context_distiller.rs.md  file_src_context_harvesters.rs.md  file_src_context_mod.rs.md  file_src_context_persistence.rs.md  file_src_lib.rs.md  file_src_main.rs.md  file_src_openrouter.rs.md  file_src_planer_task_executor.rs.md  file_src_planer_task_planner.rs.md  file_src_session_mod.rs.md  file_src_session_session_manager.rs.md  file_src_tools_exec.rs.md  file_src_tools_file_system.rs.md  file_src_tools_mod.rs.md  module_.md  module_examples.md  module_src.md  module_src_commands.md  module_src_context.md  module_src_planer.md  module_src_session.md  module_src_tools.md
.serena/: project.yml
.serena/memories/: code_style_and_conventions.md  project_overview.md  suggested_commands.md  task_completion_workflow.md
docs/: errors.md  execution_stack.rs  plan_display.rs  planner.md  res.json  semantic_engine.rs
examples/: cli_prompter_demo.rs  context_test.rs  file_system_tools_demo.rs  harvester_demo.rs  session_manager_demo.rs
src/: lib.rs  main.rs  openrouter.rs
src/cli/: cli_term.rs  commands.rs  config.rs  editor.rs  file_browser.rs  history.rs  mod.rs  prompter.rs  prompter_old.rs  utils.rs
src/context/: context.rs  context_data_store.rs  harvesters.rs  mod.rs  story.rs
src/llm/: mod.rs  (+1 more)
workdir/: server.py
(+17 files in other folders)
