[package]
name = "KAI"
version = "0.1.0"
edition = "2021"

[lib]
name = "kai"
path = "src/lib.rs"

[[example]]
name = "file_system_tools_demo"
path = "examples/file_system_tools_demo.rs"

[[example]]
name = "session_manager_demo"
path = "examples/session_manager_demo.rs"

[[example]]
name = "harvester_demo"
path = "examples/harvester_demo.rs"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
walkdir = "2.3"
glob = "0.3"
regex = "1.5"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.0"
