[package]
name = "KAI"
version = "0.1.0"
edition = "2021"
default-run = "kai"

[lib]
name = "kai"
path = "src/lib.rs"

[[bin]]
name = "kai"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
walkdir = "2.3"
glob = "0.3"
regex = "1.5"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
inquire = "0.7"
crossterm = "0.27"

[dev-dependencies]
tempfile = "3.0"
