[package]
name = "KAI"
version = "0.1.0"
edition = "2021"
default-run = "KAI"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
walkdir = "2.3"
glob = "0.3"
regex = "1.5"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
inquire = "0.7"
crossterm = "0.27"
ratatui = "0.24"
indicatif = "0.17.7"

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"
